RESOLVED FIXED282718
[scroll-animations] Several tests failing due to scroll anchoring
https://bugs.webkit.org/show_bug.cgi?id=282718
Summary [scroll-animations] Several tests failing due to scroll anchoring
Nikos Mouchtaris
Reported 2024-11-06 14:45:26 PST
[scroll-animations] Several tests failing due to scroll anchoring
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-06 14:47:10 PST
Nikos Mouchtaris
Comment 2 2024-11-06 14:49:46 PST
EWS
Comment 3 2024-11-13 16:30:50 PST
Committed 286570@main (17eb9032bfaf): <https://commits.webkit.org/286570@main> Reviewed commits have been landed. Closing PR #36289 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.