[scroll-animations] Several tests failing due to scroll anchoring https://bugs.webkit.org/show_bug.cgi?id=282718 rdar://139386774

Reviewed by Simon Fraser.

Several scroll animation tests are failing due to elements being animated causing
scroll anchoring adjustments. Fix this buy comparing transform values in
scrollAnchoringSuppressionStyleDidChange.

* LayoutTests/TestExpectations:
* Source/WebCore/page/LocalFrameView.cpp:
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::scrollAnchoringSuppressionStyleDidChange const):

Canonical link: https://commits.webkit.org/286570@main